--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ body {
     --light-square: #ecf0f1;
     --dark-square: #bdc3c7;
     --board-border: #34495e;
-    --size: 50px;
+    --size: 45px;
     font-family: 'Roboto', sans-serif;
     background: linear-gradient(135deg, var(--bg-gradient-start), var(--bg-gradient-end));
     color: var(--text-color);
@@ -98,7 +98,7 @@ p {
 }
 
 button {
-    margin-top: 20px;
+    margin-top: 0px;
     padding: 10px 25px;
     font-size: 1rem;
     background-color: var(--accent-color);
@@ -112,4 +112,82 @@ button {
         background-color: var(--accent-color-hover);
         transform: scale(1.02);
     }
+}
+
+body {
+    font-family: sans-serif;
+    display: grid;
+    height: 100vh;
+    place-items: center;
+}
+
+.base-timer {
+    position: relative;
+    width: 50px;
+    height: 50px;
+}
+
+.base-timer__svg {
+    transform: scaleX(-1);
+}
+
+.base-timer__circle {
+    fill: none;
+    stroke: none;
+}
+
+.base-timer__path-elapsed {
+    stroke-width: 7px;
+    stroke: grey;
+}
+
+.base-timer__path-remaining {
+    stroke-width: 7px;
+    stroke-linecap: round;
+    transform: rotate(90deg);
+    transform-origin: center;
+    transition: 1s linear all;
+    fill-rule: nonzero;
+    stroke: currentColor;
+}
+
+.base-timer__path-remaining.green {
+    color: rgb(65, 184, 131);
+}
+
+.base-timer__path-remaining.orange {
+    color: orange;
+}
+
+.base-timer__path-remaining.red {
+    color: red;
+}
+
+.base-timer__label {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+}
+
+#timer {
+    display: inline-block;
+    vertical-align: middle;
+    padding-left: 10px;
+}
+
+#timer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+#reset {
+    padding: 10px 20px;
+    font-size: 16px;
 }
